--- a/index.html
+++ b/index.html
@@ -16,3 +16,17 @@
        </div>
 </body>
 </html>
+
+<style> 
+    body {
+        margin: 0px;
+        font-family: ‘segoe ui’;
+    }
+
+    .nav {
+        height: 50px;
+        width: 100%;
+        background-color: #1177ca;
+        position: relative;
+    } 
+</style>
